--- a/frontend/src/Components/Content/Content.css
+++ b/frontend/src/Components/Content/Content.css
@@ -21,7 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  height: 85vh;
 }
 .shapeDiv {
   /* background-color: grey; */
@@ -50,9 +50,23 @@
 
 p {
   text-align: justify;
+  
 }
 .h1Tag {
   letter-spacing: 20px;
   font-size: 5rem;
   color: black;
+}
+
+.propertyDiv{
+  padding: 2rem 4rem 2rem 4rem ;
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.7
+  );
+  backdrop-filter: blur(10px);
+  margin:0 2rem 0 2rem ;
+  border-radius: 12px;
 }
