--- a/frontend/src/Pages/HomePage/HomePage.css
+++ b/frontend/src/Pages/HomePage/HomePage.css
@@ -1,19 +1,172 @@
-.mainContHome {
-  width: 100vw;
-  min-height: 100vh;
-  /* background-image: url("../../assets/Dash1.png"); */
-  background-repeat: no-repeat;
-  background-size: cover;
-  filter: brightness(80%);
+.homePageMainContainer {
   position: relative;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.background-video {
-  position: fixed; /* Fixed position to cover the whole viewport */
+.backgroundFilter {
+  margin: 0 2rem 0 2rem;
+  border-radius: 20px;
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100vh;
-  object-fit: cover; /* Cover the entire container */
-  z-index: -1; /* Place the video behind other content */
+  right: 0;
+  height: 80vh;
+  background: url("../../assets/bgHome.png");
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.5
+  ); /* Background color with desired opacity */
+  filter: brightness(40%); /* Adjust the filter as needed */
+  z-index: -1;
+}
+
+.contentContainer {
+  height: 60vh;
+  position: relative;
+  text-align: center;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.h1TagPicCard {
+  font-size: 3rem;
+  font-weight: bold;
+  color: white;
+}
+
+.text-success {
+  color: green;
+}
+
+.pTagPicCard {
+  margin: 2rem;
+  font-size: 1rem;
+  color: white;
+}
+.searchBarContainer {
+  background-color: white;
+  height: 25vh;
+  width: 80vw;
+  border-radius: 0 20px 20px 20px;
+  box-shadow: 2px 4px 7px grey;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+}
+.seacrhBarContent {
+  margin: 0 2rem 0 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.searchBarMain {
+  width: 19vw;
+  height: 8vh;
+  border: none;
+  outline: none;
+  background-color: rgba(220, 220, 220, 0.243);
+  margin: 0 2px 0 2px;
+  padding-left: 0.5rem;
+  border-radius: 5px;
+}
+.selectTagMain {
+  width: 19vw;
+  height: 8vh;
+  border: none;
+  outline: none;
+  background-color: grey;
+  background-color: rgba(220, 220, 220, 0.243);
+  margin: 0 2px 0 2px;
+  padding-left: 0.5rem;
+  border-radius: 5px;
+}
+.btnSearchMain {
+  width: 19vw;
+  border-radius: 5px;
+  margin: 1rem 0 0 2rem;
+}
+.mainTotalSearchbar {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.typeSearchBar {
+  border-radius: 20px 20px 0 0;
+  padding: 1rem 2rem;
+  background-color: white;
+  display: flex;
+}
+
+.help3Cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+.helpCard {
+  width: 20vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 2rem;
+}
+.iconsHelpCard {
+  color: #3b803e;
+}
+.propertyCardsMain {
+  display: flex;
+  justify-content: center;
+}
+
+.propertyCard {
+  width: 20vw;
+  margin: 1rem 2rem;
+}
+.propertyDiv {
+  margin-top: 1rem;
+}
+.selectedButton {
+  background-color: green;
+  color: white;
+  border: none;
+  padding: 1rem;
+  border-radius: 1rem;
+  transition: all 0.5s;
+}
+.selectedButton:hover {
+  background-color: rgb(0, 98, 0);
+  color: white;
+  border: none;
+  padding: 1rem;
+  border-radius: 1rem;
+  transition: all 0.5s;
+}
+
+.unselectedButton {
+  background-color: white;
+  color: black;
+  border: none;
+  padding: 1rem;
+  border-radius: 1rem;
+  transition: all 0.5s;
+}
+
+.unselectedButton:hover {
+  background-color: rgb(224, 224, 224);
+  color: black;
+  border: none;
+  padding: 1rem;
+  border-radius: 1rem;
+  transition: all 0.5s;
 }
