--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,10 +19,10 @@ code {
 }
 .btnHover {
   border: none;
-  border-radius: 6px;
-  padding: 5px 10px 5px 10px;
+  border-radius: 20px;
+  padding: 8px 20px 8px 20px;
   color: white;
-  background-color: var(--random);
+  background-color: #3b803e;
   font-weight: 600;
 }
 .btnHover1 {
@@ -34,11 +34,8 @@ code {
   font-weight: 600;
 }
 .btnHover:hover {
-  border: none;
-  border-radius: 6px;
-  padding: 5px 10px 5px 10px;
   color: rgb(10, 2, 2);
-  background-color: white;
+  background-color: rgb(233, 232, 232);
   transition: all 0.5s;
 }
 .btnHover1:hover {
