--- a/frontend/src/Pages/Signup/SignUp.css
+++ b/frontend/src/Pages/Signup/SignUp.css
@@ -28,7 +28,7 @@
   background-color: #ffffff;
   border-radius: 10px;
   padding: 3rem 2rem;
-  width: 30vw;
+  /* width: 30vw; */
   /* height: 70vh; */
   box-shadow: 2px 5px 7px grey;
 }
