--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -27,3 +27,36 @@
   font-weight: bold;
   color: #3b803e;
 }
+@media (max-width: 1000px) {
+  .headerHeadingDiv {
+    letter-spacing: 1px;
+  }
+  .headerMainContainer {
+    flex-direction: column;
+    height: 120px;
+    margin: 1rem 0;
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 767px) {
+  .headerMainContainer {
+    margin: 1rem auto;
+  }
+  .navlinks {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 500px) {
+  .navlinks {
+    font-size: 10px;
+    margin: 0 10px;
+  }
+}
+@media (max-width: 360px) {
+  .navlinks {
+    font-size: 8px;
+    margin: 0 4px;
+  }
+}
