--- a/frontend/src/Pages/Signup/SignUp.css
+++ b/frontend/src/Pages/Signup/SignUp.css
@@ -1,6 +1,7 @@
 .signUpMainContainer {
   width: 100vw;
   height: 100vh;
+  overflow-y: auto;
 }
 .backgroundFilterSignUp {
   position: absolute;
@@ -28,7 +29,7 @@
   background-color: #ffffff;
   border-radius: 10px;
   padding: 3rem 2rem;
-  /* width: 30vw; */
+  width: 40vw;
   /* height: 70vh; */
   box-shadow: 2px 5px 7px grey;
 }
@@ -65,4 +66,21 @@
 }
 .textFieldsDiv {
   margin-top: 3rem;
+  width: auto;
+}
+@media (max-width: 850px) {
+  .formCont {
+    width: 70vw;
+  }
+  .textFieldsDiv {
+    width: auto;
+  }
+}
+@media (max-width: 450px) {
+  .formCont {
+    width: 95vw;
+  }
+  .textFieldsDiv {
+    width: auto;
+  }
 }
